@@ -1,3 +1,8 @@
+Tue Jan 27 16:27:44 2015  Eric Wong  <e@80x24.org>
+
+	* lib/resolv.rb: consider ENETUNREACH as ResolvTimeout
+	  [ruby-core:67411] [Bug #10712]
+
 Thu Jan 22 18:15:41 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* ext/zlib/zlib.c: fix document of method signatures.
